--- a/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
+++ b/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
@@ -5,38 +5,38 @@
 
 <template v-if="details!=null">
     <dl class="dl-label-w100 mt30">
-        <dd>标题</dd>
-        <dt>{{ details.Title }}</dt>
-        <dd>创建者</dd>
-        <dt>{{ details.CreatorName }}</dt>
-        <dd>创建时间</dd>
-        <dt>
+        <dt>标题</dt>
+        <dd>{{ details.Title }}</dd>
+        <dt>创建者</dt>
+        <dd>{{ details.CreatorName }}</dd>
+        <dt>创建时间</dt>
+        <dd>
             {{ new Date(Date.parse(details.CreateTime)).format('yyyy-MM-dd hh:mm:ss') }}
-        </dt>
-        <dd>状态</dd>
-        <dt>
+        </dd>
+        <dt>状态</dt>
+        <dd>
             {{ StudyPlanStatus.getItem(details.PlanStatus).toString('text') }}
-        </dt>
-        <dd>说明</dd>
-        <dt>{{ details.Content }}</dt>
-        <dd>学习状态</dd>
-        <dt>{{ StudyStatus.getItem(details.StudyStatus).toString('text') }}</dt>
-        <dd>学习进度</dd>
-        <dt>
+        </dd>
+        <dt>说明</dt>
+        <dd>{{ details.Content }}</dd>
+        <dt>学习状态</dt>
+        <dd>{{ StudyStatus.getItem(details.StudyStatus).toString('text') }}</dd>
+        <dt>学习进度</dt>
+        <dd>
             <i-progress :percent="details.Progress*100"></i-progress>
-        </dt>
-        <dd>最后学习时间</dd>
-        <dt>
+        </dd>
+        <dt>最后学习时间</dt>
+        <dd>
             {{ new Date(Date.parse(details.LastStudyTime)).format('yyyy-MM-dd hh:mm:ss') }}
-        </dt>
-        <dd>课程</dd>
-        <dt>
+        </dd>
+        <dt>课程</dt>
+        <dd>
             <i-table :columns="courseColumns" :data="details.Courses"></i-table>
-        </dt>
-        <dd>所有学员</dd>
-        <dt>
+        </dd>
+        <dt>所有学员</dt>
+        <dd>
             <i-table :columns="studentColumns" :data="details.Students"></i-table>
-        </dt>
+        </dd>
     </dl>
 </template>
 
