--- a/TeamCores.Web/Views/Exams/Index.cshtml
+++ b/TeamCores.Web/Views/Exams/Index.cshtml
@@ -259,6 +259,8 @@
 								var pager = data.Data;
 								this.gridData = pager.Table;
 								this.reviseSearchQuery(pager.Size, pager.Index, pager.Count);
+							} else {
+								this.$Message.error(data.Message);
 							}
 						}
 					});
